# DVR-sytem

./: CMakeLists.txt  LICENSE  Main.qml.autosave  audio.py  main.cpp  main.qml  opencvimageprovider.cpp  opencvimageprovider.h  videostreamer.cpp  videostreamer.h
installer/: setup.nsi
